# qkit

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
qkit/: __init__.py  charts.py  cli.py  config.py
qkit/backtest/: __init__.py  engine.py
qkit/data/: __init__.py  contract.py  jobs.py  moomoo_client.py  provider.py  store.py  yfinance_client.py
qkit/pipeline/: __init__.py
qkit/portfolio/: __init__.py  hedge.py  risk.py
qkit/pricing/: __init__.py  analysis.py  bsm.py  greeks.py  greeks_mpl.py  heston.py  iv.py  monte_carlo.py
qkit/reports/: __init__.py  generator.py
qkit/signals/: __init__.py  pairs.py  regime.py  spectral.py  vrp.py
qkit/volatility/: __init__.py  garch.py  svi.py
qkit/web/: __init__.py  app.py
qkit/web/static/css/: terminal.css
qkit/web/templates/: analysis.html  base.html  dashboard.html  gallery.html  greeks.html  market.html  options.html  pairs.html  pricer.html  risk.html  screener.html  signals.html  symbol.html
